2012-07-26  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* mkind.[ch] [WIN32]: Use binary mode for input and output
	(from W32TeX).
	* mkind.h: Drop extern declaration of qqsort() and main().
	* qsort.h (new): Extern declaration of of qqsort().
	* qsort.c: Replace #include "mkind.h" by #include "qsort.h".
	* sortid.c: Add #include "qsort.h".
	* Makefile.am (makeindex_SOURCES): Add the new file qsort.h.

	* tests/makeindex.test (new): Shell script for a test case.
	* tests/sample.idx (new): Test input.
	* tests/sample.ind (new): Expected output.
	* Makefile.am: Adapted.

2012-07-15  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* mkind.c: Pass program name string to kpse_set_program_name.

2011-09-30  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* mkind.c (main): The argument of kpse_set_program_name() must
	be the unmodified argv[0], not basename(argv[0]) or some such.

2011-09-25  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* genind.c: write a binary string by octal numbers to avoid an
	error in old compilers.

2011-09-24  Karl Berry  <karl@tug.org>

	* genind.c (make_entry): do not output erroneous \( when
	an open range is erroneously opened again.  Report from
	Barbara Beeton, see tests/nested-range-bb.tex and related.

2011-04-18  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* sortid.c (compare_string): Cast strcoll() args to 'char *' to
	avoid 'differ in signedness' warnings.

2010-12-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am, configure.ac [WIN32]: Skip mkindex shell script.

2010-11-02  Taco Hoekwater  <taco@elvenkind.com>

	* mkind.c (mk_getc): new fn to accept both LF and CRLF.
	* mkind.h (mk_getc): declare it.
	(GET_CHAR): use it.

2010-07-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac [TEX_LIVE_VERSION]: From ../../version.ac.
	* mkind.h: Use TEX_LIVE_VERSION.
	* makeindex.1: Formatting.

2010-03-09  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* mkind.c: Use kpse_set_program_name() instead of
	kpse_set_progname().
