@@ -7,6 +7,8 @@
  *  Nelson Beebe (beebe@science.utah.edu).
  *
  */
+#include <string.h>	/* for size_t */
 
-extern void qqsort (char *base, int n, int size,
-		int (*compar)(char*,char*));
+typedef int (*qq_compar_fn_t)(const void *, const void *);
+
+extern void qqsort (void *base, size_t n, size_t size, qq_compar_fn_t compar);
